Moves the tab 3 labels down by 2px to ensure they're vertically aligned at the center

--- a/public/css/meetings.css
+++ b/public/css/meetings.css
@@ -460,6 +460,7 @@
     width: 100%;
     padding-right: 10px;
     display: none;
+    top: 2px;
 }
 
 .selected .busy-count {
